--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
+  # # To add assets to your application, add an assets section, like this:
   assets:
-   - data/
+   - data/menu_opts.json
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
